test/compile_errors/stage1/obj/issue_9346_return_outside_of_function_scope.zig
pub const empty = return 1;

// issue #9346: return outside of function scope
//
// tmp.zig:1:19: error: 'return' outside function scope
